Details
-
Type:
Bug
-
Status: Closed
-
Priority:
P3: Somewhat important
-
Resolution: Fixed
-
Affects Version/s: 6.2.2, 6.3
-
Fix Version/s: 6.2.3, 6.3.0 Alpha, 6.4.0 Beta1
-
Component/s: Build tools: qdoc
-
Labels:None
-
Commits:18d293ab75 (qt/qttools/dev) 65f2348734 (qt/qttools/6.2) da27233d9e (qt/qttools/6.3) 65f2348734 (qt/tqtc-qttools/6.2) da27233d9e (qt/tqtc-qttools/6.3) 18d293ab75 (qt/tqtc-qttools/dev) 65f2348734 (qt/tqtc-qttools/6.2.3) 65f2348734 (qt/qttools/6.2.4)
-
Sprint:Da Vinci sprint 46
Description
When compiling a master .qdocconf file either manually or programmatically, it's possible to end up with empty lines or a trailing newline in the file. In this case, QDoc fails with less-than-helpful
error message.
Cannot open file '/some/path': file to open is a directory