qdoc: Ignore empty lines in the master qdocconf file

When compiling a master .qdocconf file either manually or
programmatically, it's possible to end up with empty lines or a trailing
newline in the file. In this case, QDoc fails with less-than-helpful
error message. Ignore empty lines.

Pick-to: 6.3 6.2
Fixes: QTBUG-99409
Done-with: Luca Di Sera <luca.disera@qt.io>
Change-Id: I5157b63bcdbcd65731615fc7bad388a2385d8cfb
Reviewed-by: Luca Di Sera <luca.disera@qt.io>
Reviewed-by: Venugopal Shivashankar <Venugopal.Shivashankar@qt.io>